force-app/main/default/objects/DIR_Case__c/fields/Cash_Balance_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Cash_Balance_on_Case__c</fullName>
    <description>Difference of deposited funds and checks written against deposits.</description>
    <formula>Deposited_Funds__c - Funds_Drawn_on_Deposits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Balance on Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>