force-app/main/default/objects/DIR_Case__c/fields/Cash_Pay_226__c.field-meta.xml
<CustomField>
    <fullName>Cash_Pay_226__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the user when cash pay 226 is indicated for this case</description>
    <inlineHelpText>Check this box if Cash Pay 226 is indicated on this case.</inlineHelpText>
    <label>Cash Pay 226</label>
    <type>Checkbox</type>
</CustomField>