force-app/main/default/objects/DIR_Case__c/fields/Cashiering_Purge_Date__c.field-meta.xml
<CustomField>
    <fullName>Cashiering_Purge_Date__c</fullName>
    <description>Used to capture the purge date for Cashiering. F-0401</description>
    <label>Cashiering Purge Date</label>
    <type>Date</type>
</CustomField>