force-app/main/default/objects/DIR_Case__c/fields/Cashiering_Status__c.field-meta.xml
<CustomField>
    <fullName>Cashiering_Status__c</fullName>
    <description>Field allows cashier users to update the Case Cashiering Status to either open or closed so that they can properly identify cases as being open or closed from a cashiering perspective.</description>
    <label>Cashiering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>