force-app/main/default/objects/DIR_Case__c/fields/Check_Stubs_Document__c.field-meta.xml
<CustomField>
    <fullName>Check_Stubs_Document__c</fullName>
    <label>Check Stubs Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>