force-app/main/default/objects/DIR_Case__c/fields/Citation_Number__c.field-meta.xml
<CustomField>
    <fullName>Citation_Number__c</fullName>
    <label>Citation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>