force-app/main/default/objects/DIR_Case__c/fields/Citation_Served_Date__c.field-meta.xml
<CustomField>
    <fullName>Citation_Served_Date__c</fullName>
    <label>Citation Served Date</label>
    <type>Date</type>
</CustomField>