force-app/main/default/objects/DIR_Case__c/fields/Citation_Status__c.field-meta.xml
<CustomField>
    <fullName>Citation_Status__c</fullName>
    <label>Citation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Citation Issued</fullName>
            </value>
            <value>
                <fullName>Entry of Judgment Filed</fullName>
            </value>
            <value>
                <fullName>Appealed</fullName>
            </value>
            <value>
                <fullName>Discovery Issued</fullName>
            </value>
            <value>
                <fullName>Hearing Scheduled</fullName>
            </value>
            <value>
                <fullName>Subpoenas Issued</fullName>
            </value>
            <value>
                <fullName>Decision Issued</fullName>
            </value>
            <value>
                <fullName>Writ Filed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>