force-app/main/default/objects/DIR_Case__c/fields/Claim_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Claim_Period_To__c</fullName>
    <description>Field for WCA 55 output document via Conga Composer; requested by Jan Joy to capture the end of the WCA violation period.</description>
    <label>Employment To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>