force-app/main/default/objects/DIR_Case__c/fields/Claimant_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used in form tool in order for the  Claimant to submit the form.</description>
    <label>Claimant Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>