force-app/main/default/objects/DIR_Case__c/fields/Claimant_Claiming_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Claiming_Penalties__c</fullName>
    <label>Claimant Claiming Penalties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting time penalties [Labor Code 203]</fullName>
                <default>true</default>
                <label>Waiting time penalties [Labor Code 203]</label>
            </value>
            <value>
                <fullName>"Bounced" checks [Labor Code 203.1]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>