force-app/main/default/objects/DIR_Case__c/fields/Claimant_Name_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name_in_Text__c</fullName>
    <label>Claimant Name in Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>