force-app/main/default/objects/DIR_Case__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>Used to indicate that a case is closed. Multiple statuses are considered closed and may be different by record type.
Edited to no longer include RCI Case Statuses.</description>
    <formula>IF (
CASE ( TEXT ( Status__c ),
'Closed', 1 ,
'Duplicate Case', 1 ,
'Rejected', 1 ,
'Closed By PAGA', 1 , 
'Closed - JEU Referral', 1,
0 ) 
&gt; 0, TRUE, FALSE )</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>