force-app/main/default/objects/DIR_Case__c/fields/Closure_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Closure_Disposition__c</fullName>
    <description>Dismissed Reason</description>
    <inlineHelpText>Choose the status of the case at closure</inlineHelpText>
    <label>Closure Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive Closure</fullName>
            </value>
            <value>
                <fullName>De Novo Referral</fullName>
            </value>
            <value>
                <fullName>Closed-Discharged in Bankruptcy</fullName>
                <label>Discharged in Bankruptcy</label>
            </value>
            <value>
                <fullName>DISMISSED</fullName>
            </value>
            <value>
                <fullName>Dismissed – Claimant Withdrew</fullName>
            </value>
            <value>
                <fullName>Dismissed – Claimant Abandoned</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Fast Track Ref to Remedial fund</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
                <label>JUDGMENT</label>
            </value>
            <value>
                <fullName>Not confirmed by Claimant</fullName>
                <label>Not confirmed by Plaintiff</label>
            </value>
            <value>
                <fullName>PAID IN FULL</fullName>
            </value>
            <value>
                <fullName>Plaintiff rec’d $0 ODA</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – DFEH</fullName>
                <label>Lack of Jurisdiction - DFEH</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - WCAB</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - FMLA</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - NRLA</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - DOL (WHD)</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – Atty Referral</fullName>
                <label>Lack of Jurisdiction - Atty Referral</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – Other</fullName>
                <label>Lack of Jurisdiction - Other</label>
            </value>
            <value>
                <fullName>Untimely (Outside SOL)</fullName>
            </value>
            <value>
                <fullName>PFC – No Protected Activity</fullName>
                <label>PFC - No Protected Activity</label>
            </value>
            <value>
                <fullName>PFC – No Employer Knowledge</fullName>
                <label>PFC - No Employer Knowledge</label>
            </value>
            <value>
                <fullName>PFC- No Adverse Action</fullName>
                <label>PFC - No Adverse Action</label>
            </value>
            <value>
                <fullName>PFC – No Causal Link</fullName>
                <label>PFC - No Causal Link</label>
            </value>
            <value>
                <fullName>EPA - No Pay Disparity</fullName>
            </value>
            <value>
                <fullName>EPA - No Comparators</fullName>
            </value>
            <value>
                <fullName>EPA - No substantially similar work</fullName>
            </value>
            <value>
                <fullName>EPA - No similar work conditions</fullName>
            </value>
            <value>
                <fullName>EPA - ER JUST Merit</fullName>
            </value>
            <value>
                <fullName>EPA - ER JUST Seniority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>