force-app/main/default/objects/DIR_Case__c/fields/Closure_Disposition_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Disposition_Other_Reason__c</fullName>
    <description>Dismissed - Other Reason</description>
    <label>Closure Disposition - Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>