force-app/main/default/objects/DIR_Case__c/fields/Collection_Hold_Stop_Sign__c.field-meta.xml
<CustomField>
    <fullName>Collection_Hold_Stop_Sign__c</fullName>
    <description>The Stop Sign will display when a Collections Hold is in effect.</description>
    <formula>IF( OR(Collections_Hold__c,ISPICKVAL(Status__c, "Mechanic’s Lien Stay")), IMAGE("/servlet/servlet.FileDownload?file=015d000000BD3Vr", "Collections Hold - Stop!", 25, 25), " ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Stop Sign will display when a Collections Hold is in effect. The hold is for your information only and doesn't prevent any other activity on the case.</inlineHelpText>
    <label>Collections Hold Stop Sign</label>
    <type>Text</type>
</CustomField>