force-app/main/default/objects/DIR_Case__c/fields/Collections_Hold__c.field-meta.xml
<CustomField>
    <fullName>Collections_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will used in the Case Violations Flow</description>
    <label>Collections Hold</label>
    <type>Checkbox</type>
</CustomField>