force-app/main/default/objects/DIR_Case__c/fields/Companion_Case__c.field-meta.xml
<CustomField>
    <fullName>Companion_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends notification to Senior Deputy when this field is checked</description>
    <label>Companion Case</label>
    <type>Checkbox</type>
</CustomField>