force-app/main/default/objects/DIR_Case__c/fields/Comparator_Sex_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Comparator_Sex_Race_Ethnicity__c</fullName>
    <label>Comparator Sex, Race/Ethnicity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>