force-app/main/default/objects/DIR_Case__c/fields/Compensatory_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_Amount__c</fullName>
    <label>Compensatory Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>