force-app/main/default/objects/DIR_Case__c/fields/Complex_Process__c.field-meta.xml
<CustomField>
    <fullName>Complex_Process__c</fullName>
    <label>Complex Process</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Includes one interpreter.</fullName>
            </value>
            <value>
                <fullName>Involves rare/exotic languages or multiple interpreters.</fullName>
            </value>
            <value>
                <fullName>Defendant(s) is/are represented.</fullName>
            </value>
            <value>
                <fullName>Plaintiff is represented.</fullName>
            </value>
            <value>
                <fullName>Number of Defendants or liable parties that are listed.</fullName>
            </value>
            <value>
                <fullName>One or more special theory of liability has been raised: Client Employer, IC, Exempt/Non-Exempt, Joint Employer, Individual Liability (558.1), Joint Liability (238.5).</fullName>
            </value>
            <value>
                <fullName>Multiple case issues.</fullName>
            </value>
            <value>
                <fullName>Claim includes irregular work hours and/or multiple hourly rates for extended periods.</fullName>
            </value>
            <value>
                <fullName>Claim involves subpoenas.</fullName>
            </value>
            <value>
                <fullName>More than 2 witnesses, excluding principal parties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>