force-app/main/default/objects/DIR_Case__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <description>Person(s) in the business/company.</description>
    <inlineHelpText>Advocate contact person.</inlineHelpText>
    <label>Advocate Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>