force-app/main/default/objects/DIR_Case__c/fields/Converted_from_Inspection_Request__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Inspection_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by code that handles the updated of a case when an RLLV is created for a case.</description>
    <inlineHelpText>Indicates the case was originally an inspection request.</inlineHelpText>
    <label>Converted from Inspection Request</label>
    <type>Checkbox</type>
</CustomField>