force-app/main/default/objects/DIR_Case__c/fields/County_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>County_Jurisdiction__c</fullName>
    <description>County field used primarily for creation of output docs</description>
    <inlineHelpText>County where work was performed</inlineHelpText>
    <label>County Jurisdiction</label>
    <length>75</length>
    <type>Text</type>
</CustomField>