force-app/main/default/objects/DIR_Case__c/fields/Court_Case_Number_for_PAGA_Case_del__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number_for_PAGA_Case_del__c</fullName>
    <description>For PAGA Cases, this is the PAGA Case Number.</description>
    <inlineHelpText>For PAGA Cases, this is the PAGA Case Number.</inlineHelpText>
    <label>Court Case Number for PAGA Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>