force-app/main/default/objects/DIR_Case__c/fields/Court_Name_for_PAGA_Case__c.field-meta.xml
<CustomField>
    <fullName>Court_Name_for_PAGA_Case__c</fullName>
    <description>Court Name for the PAGA Case</description>
    <inlineHelpText>Court Name for the PAGA Case</inlineHelpText>
    <label>Court Name for PAGA Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>