force-app/main/default/objects/DIR_Case__c/fields/Court_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Order_Date__c</fullName>
    <label>Date Court order signed by Judge</label>
    <type>Date</type>
</CustomField>