force-app/main/default/objects/DIR_Case__c/fields/Covid_Inspection_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Covid_Inspection_Other_Reason__c</fullName>
    <label>Covid Inspection Other Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>