force-app/main/default/objects/DIR_Case__c/fields/Covid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Covid_Reason__c</fullName>
    <label>Covid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business layoff + Sick leave unpaid/denied</fullName>
            </value>
            <value>
                <fullName>Business shutdown + Sick leave</fullName>
            </value>
            <value>
                <fullName>Business layoff - Other (specify):</fullName>
            </value>
            <value>
                <fullName>Business shutdown - Other (specify):</fullName>
            </value>
            <value>
                <fullName>Sick leave unpaid/denied</fullName>
            </value>
            <value>
                <fullName>2020 SPSL</fullName>
            </value>
            <value>
                <fullName>2021 SPSL</fullName>
            </value>
            <value>
                <fullName>2020 + 2021 SPSL</fullName>
            </value>
            <value>
                <fullName>Business Shut Down</fullName>
            </value>
            <value>
                <fullName>Business Layoff</fullName>
            </value>
            <value>
                <fullName>Other – please explain</fullName>
            </value>
            <value>
                <fullName>2022 SPSL</fullName>
            </value>
            <value>
                <fullName>2021 + 2022 SPSL</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
            <value>
                <fullName>SPSL</fullName>
                <isActive>false</isActive>
                <label>SPSL</label>
            </value>
            <value>
                <fullName>unpaid/denied</fullName>
                <isActive>false</isActive>
                <label>unpaid/denied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>